--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
-# Don't add any of the actual data to GitHub, but code automatically creates
-# folder structure
-data/
+# Don't add any of the actual boxscores data to GitHub, but code automatically creates
+# folder structure, keeping contest-files public so positions can be added
+boxscores/
+*-raw.csv # refers to bigger nfl data files
 
 # Don't want scrap notebook
 scrap.ipynb
