--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,12 @@
 beautifulsoup4==4.12.2
 certifi==2023.7.22
 charset-normalizer==3.2.0
+dill==0.3.7
 idna==3.4
 numpy==1.25.2
+pandarallel==1.6.5
 pandas==2.1.0
+psutil==5.9.5
 python-dateutil==2.8.2
 pytz==2023.3.post1
 requests==2.31.0
