--- a/requirements.txt
+++ b/requirements.txt
@@ -1,17 +1,28 @@
+attrs==23.1.0
 beautifulsoup4==4.12.2
 certifi==2023.7.22
 charset-normalizer==3.2.0
 dill==0.3.7
+exceptiongroup==1.1.3
+h11==0.14.0
 idna==3.4
 numpy==1.25.2
+outcome==1.2.0
 pandarallel==1.6.5
 pandas==2.1.0
 psutil==5.9.5
+PySocks==1.7.1
 python-dateutil==2.8.2
 pytz==2023.3.post1
 requests==2.31.0
+selenium==4.12.0
 six==1.16.0
+sniffio==1.3.0
+sortedcontainers==2.4.0
 soupsieve==2.5
 tqdm==4.66.1
+trio==0.22.2
+trio-websocket==0.10.4
 tzdata==2023.3
 urllib3==2.0.4
+wsproto==1.2.0
