--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,8 @@
 # folder structure, keeping contest-files public so positions can be added
 boxscores/
 *-raw.csv # refers to bigger nfl data files
+data/
+
 
 # Hiding past performance optimizer for now
 past-performances.ipynb
